Sun May 13 18:34:33 BST 2001  Colin Watson  <cjwatson@debian.org>

	* GNUmakefile.in (dist): Don't install po/Makefile.in.

	* src/stamp-h: Removed.
	* GNUmakefile.in, src/Makefile.in: Updated accordingly.

	* GNUmakefile.in (distclean): Don't clean configure, src/lexgrog.c,
	  zsoelim/zsoelim.c.
	  (realclean): Clean configure here instead. realclean targets in
	  subdirs already remove the other two.
	* zsoelim/Makefile.in (clean): Let realclean remove zsoelim.c.

Sun May 13 17:17:32 BST 2001  Colin Watson  <cjwatson@debian.org>

	* man/Makefile.in: Another try to get NLS installation working
	  properly. The last change was wrong when LINGUAS was unset.

	* GNUmakefile.in (dist): Install docs/manpage.example.

Sun May 13 16:54:01 BST 2001  Colin Watson  <cjwatson@debian.org>

	* man/Makefile.in: Exclude NLS directories without man pages, as CVS
	  can't delete directories quite as fully as I'd like.

	* configure.in: No subdirectory Makefiles need ALL_LINGUAS any more.

	* manual/Makefile: Make the location of soelim variable so that
	  distributions can e.g. use the version in the build directory.

	* manual/Makefile, manual/README: Add an HTML target. Disabled by
	  default as groff's HTML driver doesn't produce very good output
	  yet (as of 1.16).

	* include/Defines.in: Only remove /usr from the default sysconfdir
	  if the prefix is exactly /usr, not something that happens to
	  contain /usr (like the default /usr/local).

Sun May 13 13:39:17 BST 2001  Colin Watson  <cjwatson@debian.org>

	* man-db.gnu, man-db.lsm: Mention move to SourceForge and the new
	  URLs for the Debian package pool.

	* man-db.gnu: New architectures (successful Debian ports as of
	  today). New mailing list for announcements.

Sun May 13 13:18:56 BST 2001  Colin Watson  <cjwatson@debian.org>

	* README: Document FHS changes; correct pointer to
	  docs/INSTALL.autoconf.

	* docs/INSTALL.autoconf: Update to instructions from automake 1.4.
